# PineappleDemo

./: .gitmodules  CMakeLists.txt  README.md
Android/app/: CMakeLists.txt  build.gradle
Android/app/src/androidTest/java/com/pineapple/demo/: ExampleInstrumentedTest.java
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: native-lib.cpp
Android/app/src/main/java/com/pineapple/: paNativeActivity.java
Android/app/src/main/java/com/pineapple/demo/: MainActivity.java
Android/app/src/main/java/com/pineapple/sound/: paSoundPool.java
Android/app/src/main/res/values/: strings.xml  styles.xml
Android/app/src/test/java/com/pineapple/demo/: ExampleUnitTest.java
Android/gradle/wrapper/: gradle-wrapper.properties
